styles/ArtistSearch.module.scss
@import 'bulma/sass/utilities/initial-variables.sass';
@import 'bulma/sass/utilities/derived-variables.sass';

.searchContainer {
  display: block;
  position: absolute;
  z-index: 2;
  @media screen and (min-width: $desktop) { 
    left: 8vw;
    top: 60px;
  }
}

.inputLevel {
  margin-bottom: 0px !important;
  // next line overides bulma's display: flex used at intermediate sizes
  display: revert;
}

.icon {
  font-size: inherit;
}

.input {
  font-size: inherit;
  margin-left: 0.6ex;
}

.searchIncResultList {
  position: absolute;
  z-index: 2;
  margin-left: 1.4em;
  background-color: white;
  opacity: 75%;
  color: black;
  @media screen and (min-width: $desktop) {
    top: 1.4em;
  }
}

.searchIncResult {
  font-size: 60%;
  cursor: pointer;
}

.searchIncResultHl {
  background-color: $yellow;
  opacity: 50%;
}

